--- a/prefect.yaml
+++ b/prefect.yaml
@@ -15,7 +15,7 @@ push: null
 # pull section allows you to provide instructions for cloning this project in remote locations
 pull:
 - prefect.deployments.steps.git_clone:
-    repository: git@github.com:jeckel/prefect-workflow.git
+    repository: https://github.com/jeckel/prefect-workflow.git
     branch: main
     access_token: null
 
