--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,33 @@
+volumes:
+  postgres_data:
+
 services:
+  postgres:
+    image: postgres:15
+    environment:
+      POSTGRES_USER: prefect
+      POSTGRES_PASSWORD: prefect
+      POSTGRES_DB: prefect
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U prefect" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   prefect-server:
     build: .
     command: ["uv", "run", "prefect", "server", "start", "--host", "0.0.0.0"]
     ports:
       - "4200:4200"
+    environment:
+      PREFECT_API_DATABASE_CONNECTION_URL: postgresql+asyncpg://prefect:prefect@postgres:5432/prefect
+    depends_on:
+      postgres:
+        condition: service_healthy
     develop:
       watch:
         - action: sync
@@ -23,7 +47,6 @@ services:
       interval: 3s
       timeout: 5s
       retries: 10
-#      start_period: 5s
 
   prefect-worker:
     build: .
