--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "prefect>=3.4.5",
+    "prefect[sqlalchemy]>=3.4.5",
     "prefect-github>=0.3.1",
 ]
